Fix list alignments

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,8 +15,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -27,7 +27,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -108,17 +108,16 @@ h2 {
 p {
 	margin-bottom: 20px;
 }
-.links > ul > li {
-	display: inline;
-	padding-right: 10px;
-}
-ol {
-	list-style: decimal;
-	padding-left: 20px;
+ul {
+	list-style: none;
 	margin-bottom: 30px;
 }
-ol li {
-	margin: 5px 0;
+ul li {
+	margin: 5px 0 10px;
+}
+ul li img {
+	vertical-align: middle;
+	margin-right: 5px;
 }
 .price strong {
 	margin-right: 5px;
